<resources>
    <string name="app_name">NewsAggregator</string>
    <string name="news_file">news.txt</string>
    <string name="saved_articles_file">saved_articles.txt</string>
    <string name="news_api_key">ea680a6d70b64c1f87d47dd0aaa065ba</string>
    <string name="read_article_url_field">read_article_url</string>


    <string name="username">username</string>
    <string name="preferences">Preferences</string>
    <string name="topics">Topics</string>
    <string name="keywords">Keywords</string>
    <string name="remove_entry_button">Remove entry button</string>

    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="account">Account</string>
    <string name="article_image">Article Image</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="news">News</string>
    <string name="no_account">No account?</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="username_and_password_no_empty">Username and Password fields cannot be empty!</string>
    <string name="all_fields_filled">All fields must be filled!</string>
    <string name="passwords_must_match">Passwords must match!</string>
    <string name="add_keyword">Add a Keyword</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="keyword_removed">Keyword removed!</string>
    <string name="article_removed">Article removed!</string>
    <string name="choose_action">Choose an Action</string>
    <string name="article_saved">Article saved!</string>
    <string name="article_already_saved">Article is already saved!</string>
    <string name="add_search_to_keywords">Add Search to Keywords</string>
    <string name="keyword_exits">Keyword already exists!</string>
    <string name="keyword_added">Keyword added!</string>
    <string name="shared_preferences_db_name">shared_preferences</string>
    <string name="newest_article_date_key">newest_article</string>
    <string name="send_notifications_field">send_notifications</string>
    <string name="date_1970_iso">1970-01-01T00:00:00Z</string>
    <string name="new_articles_notification_title">New Articles!</string>
    <string name="new_articles_notification_body">" new article(s) match your preferences"</string>
    <string name="notification_settings">Notification Settings</string>


    <string-array name="topics_list">
        <item>Breaking News </item>
        <item>Trending News </item>
        <item>Local News </item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health </item>
        <item>Politics</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>World</item>
        <item>Other</item>
    </string-array>

    <string-array name="publisher_list">
        <item>BBC</item>
        <item>The Guardian</item>
        <item>The Independent</item>
        <item>The Times</item>
        <item>Bloomberg</item>
    </string-array>

    <string-array name="news_article_actions">
        <!-- Do not reorder. -->
        <item>Read</item>
        <item>Save</item>
    </string-array>

    <string-array name="news_sites_domains_list">
        <item>bbc.co.uk</item>
        <item>theguardian.com</item>
        <item>thetimes.co.uk</item>
        <!-- The list can be extended, but we can't get all the articles anyway because of API restrictions. -->
    </string-array>

    <string-array name="account_preferences_tabs">
        <item>Topics</item>
        <item>Keywords</item>
        <item>Settings</item>
    </string-array>

</resources>