<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_featured_play_list_24"
        android:title="@string/news" />

    <item
        android:id="@+id/saved_articles"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/saved_articles" />


    <item
        android:id="@+id/preferences"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />


    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />


</menu>