<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|start"

                android:text="@string/username"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="@dimen/text_normal"
                android:autoSizeMaxTextSize="@dimen/text_heading1"
                android:layout_marginStart="@dimen/indent_medium" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"

                android:text="@string/preferences"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="@dimen/text_normal"
                android:autoSizeMaxTextSize="@dimen/text_heading1"
                android:layout_marginEnd="@dimen/indent_medium" />
        </LinearLayout>

        <View style="@style/DividingLine" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:textSize="@dimen/text_heading2"
            android:gravity="center"
            android:text="@string/topics"
            android:layout_marginTop="@dimen/indent_small" />

        <GridLayout
            android:id="@+id/news_type_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:columnCount="3"
            android:rowCount="4">

            <!-- Checkboxes get filled in programmatically-->
            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />

            <com.google.android.material.checkbox.MaterialCheckBox style="@style/GridCell" />
        </GridLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:textSize="@dimen/text_heading2"
            android:gravity="center"
            android:text="@string/keywords"
            android:layout_marginTop="@dimen/indent_medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keywords_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:layout_marginTop="@dimen/indent_small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_medium">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/indent_medium"

                app:fabSize="mini" />
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_bar_menu" />
</RelativeLayout>
